--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "counter-app",
+  "homepage": "https://Showichiro.github.io/counter-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
