--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "jotai": "^2.6.0",
+    "jotai-optics": "^0.3.1",
+    "optics-ts": "^2.4.1",
     "react": "^18.2.0",
     "react-daisyui": "^5.0.0",
     "react-dom": "^18.2.0"
