--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "hono": "^3.11.11",
     "jotai": "^2.6.0",
     "jotai-optics": "^0.3.1",
     "optics-ts": "^2.4.1",
     "react": "^18.2.0",
     "react-daisyui": "^5.0.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
