--- a/.github/workflows/deploy-pages.yaml
+++ b/.github/workflows/deploy-pages.yaml
@@ -34,6 +34,8 @@ jobs:
         run: pnpm install
       - name: pnpm build
         run: pnpm build
+        env:
+          VITE_API_URL: ${{ secrets.VITE_API_URL }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
